--- a/bistro/index.html
+++ b/bistro/index.html
@@ -4,5 +4,13 @@
     <title></title>
   </head>
   <body>
-  </body>
+  Black Goose Bistro
+The Black Goose Bistro offers causal lunch and  dinner fare in a hip atmosphere. The menu changes regularly to highlight the freshest ingrediests.
+
+Catering
+You have fun... we'll handle the cooking. Black Goose Catering can handle events from snacks for bridge club to elegant corporate fundraisers.
+
+Location and Hours
+Seekonk, Massachussetts;
+Monday through Thursday 11am to 9pm, Friday and Saturday, 11am to midnight</body>
 </html>
