--- a/bistro/index.html
+++ b/bistro/index.html
@@ -1,16 +1,18 @@
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title></title>
-  </head>
-  <body>
+<head>
+<meta charset="utf-8">
+<title> Black Goose Bistro> </title>
+</head>
+<body>
   Black Goose Bistro
-The Black Goose Bistro offers causal lunch and  dinner fare in a hip atmosphere. The menu changes regularly to highlight the freshest ingrediests.
+  The Resturaunt
+  The Black Goose Bistro offers casual lunch and dinner fare in a hip atmosphere. The menu changes reguarly to highlight the freshest ingredients.
 
-Catering
-You have fun... we'll handle the cooking. Black Goose Catering can handle events from snacks for bridge club to elegant corporate fundraisers.
-
-Location and Hours
-Seekonk, Massachussetts;
-Monday through Thursday 11am to 9pm, Friday and Saturday, 11am to midnight</body>
+  Catering Serivces
+  You have fun... we'll do the cooking. Black Goose catering can handle events from snacks to bridge club to elegant corporate fundraisers.
+  Location and Hours
+  Seekonk Massachusetts;
+  Monday through Thursday 11am to 9pm, Friday and Saturday, 11am to midnight
+</body>
 </html>
