--- a/bistro/index.html
+++ b/bistro/index.html
@@ -2,17 +2,19 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title> Black Goose Bistro> </title>
+<title> Black Goose Bistro </title>
 </head>
 <body>
-  Black Goose Bistro
-  The Resturaunt
-  The Black Goose Bistro offers casual lunch and dinner fare in a hip atmosphere. The menu changes reguarly to highlight the freshest ingredients.
+<h1>  Black Goose Bistro</h1>
+  <h2>The Resturaunt</h2>
+  <p>The Black Goose Bistro offers casual lunch and dinner fare in a hip atmosphere. The menu changes reguarly to highlight the freshest ingredients.</p>
 
-  Catering Serivces
-  You have fun... we'll do the cooking. Black Goose catering can handle events from snacks to bridge club to elegant corporate fundraisers.
-  Location and Hours
-  Seekonk Massachusetts;
-  Monday through Thursday 11am to 9pm, Friday and Saturday, 11am to midnight
+  <h2>Catering</h2>
+  <p>You have fun... <em>we'll handle the cooking</em>. Black Goose catering can handle events from snacks to bridge club to elegant corporate fundraisers.<p>
+
+  <h2>Location and Hours</h2>
+  <p>Seekonk Massachusetts;
+  Monday through Thursday 11am to 9pm, Friday and Saturday, 11am to midnight</p>
+
 </body>
 </html>
