--- a/bistro/index.html
+++ b/bistro/index.html
@@ -5,7 +5,7 @@
 <title> Black Goose Bistro </title>
 </head>
 <body>
-<h1>  Black Goose Bistro</h1>
+<h1><img src="blackgoose.png" alt="Black Goose Logo"><br>  Black Goose Bistro</h1>
   <h2>The Resturaunt</h2>
   <p>The Black Goose Bistro offers casual lunch and dinner fare in a hip atmosphere. The menu changes reguarly to highlight the freshest ingredients.</p>
 
@@ -13,8 +13,8 @@
   <p>You have fun... <em>we'll handle the cooking</em>. Black Goose catering can handle events from snacks to bridge club to elegant corporate fundraisers.<p>
 
   <h2>Location and Hours</h2>
-  <p>Seekonk Massachusetts;
-  Monday through Thursday 11am to 9pm, Friday and Saturday, 11am to midnight</p>
+  <p>Seekonk Massachusetts;<br>
+  Monday through Thursday 11am to 9pm,<br> Friday and Saturday, 11am to midnight</p>
 
 </body>
 </html>
