--- a/jenskitchen/index.html
+++ b/jenskitchen/index.html
@@ -14,13 +14,13 @@
     <img src="images/jenskitchen.gif" alt="Jen's Kitchen banner" width="660" height="94">
     <h1>Welcome to Jen&rsquo;s Kitchen</h1>
     <p>People who know me know that I love to cook. I've created this site to share some of my favorite recipes and online food resources. <i>Bon Appetit!</i> </p>
-    <p>About the site</p>
+    <p><a href="about.html">About the site</a></p>
     <h2>From Jen&rsquo;s Cookbook</h2>
     <ul>
       <li><a href="recipes/tapenade.html">Tapenade (Olive Spread)</a></li>
-      <li>Garlic Salmon</li>
-      <li>Linguine with Clam Sauce</li>
-      <li>Couscous with Peas and Mint</li>
+      <li><a href="recipies/salmon.html">Garlic Salmon</a></li>
+      <li><a href="recipes/pasta/linguine.html">Linguine with Clam Sauce</a></li>
+      <li><a href="recipes/pasta/couscous.html">Couscous with Peas and Mint</a></li>
     </ul>
     <h2>Good Food on the Web</h2>
     <ul>
