--- a/Ch6/glossary.html
+++ b/Ch6/glossary.html
@@ -5,11 +5,11 @@
 </head>
 <body>
 
-<h1>Glossary</h1>
+<h1 id="top">Glossary</h1>
 
 <p>A | B | C | D | E | F | G | <a href="#startH">H</a> | I | J | L | M | N | O | P | Q | R | S | T | U | V | W | X</p>
 
-<h2>A</h2>
+<h2 id="startA"><a href="#startA">A</a></h2>
 
 <dl>
 
@@ -26,8 +26,9 @@
 <dd>Parameters that extend or modify an HTML element</dd>
 
 </dl>
+<p><a href="#top">TOP</a></p>
 
-<h2>B</h2>
+<h2 id="startB"><a href="#startB">B</a></h2>
 
 <dl>
 <dt>backend</dt>
@@ -39,8 +40,9 @@
 <dt>browser</dt>
 <dd>The client software that requests and displays web pages.</dd>
 </dl>
+<p><a href="#top">TOP</a></p>
 
-<h2>C</h2>
+<h2 id="startC"><a href="#startC">C</a></h2>
 
 <dl>
 <dt>cache</dt>
@@ -55,8 +57,9 @@
 <dt>compression</dt>
 <dd>A method for reducing the file size of a document. Different file formats use different compression techniques</dd>
 </dl>
+<p><a href="#top">TOP</a></p>
 
-<h2>D</h2>
+<h2 id="startD"><a href="#startD">D</a></h2>
 
 <dl>
 <dt>dithering</dt>
@@ -68,15 +71,17 @@
 <dt>domain name</dt>
 <dd>A name that corresponds to a specific IP address.</dd>
 </dl>
+<p><a href="#top">TOP</a></p>
 
-<h2>E</h2>
+<h2 id="startE"><a href="#startE">E</a></h2>
 
 <dl>
 <dt>extranet</dt>
 <dd>A web site or system that is available within a closed system and to select users outside that system, usually via a password.</dd>
 </dl>
+<p><a href="#top">TOP</a></p>
 
-<h2>F</h2>
+<h2 id="startF"><a href="#startF">F</a></h2>
 
 <dl>
 <dt>Flash</dt>
@@ -89,8 +94,9 @@
 <dd>File Transfer Protocol; a system for moving files over the Internet from one computer to another </dd>
 
 </dl>
+<p><a href="#top">TOP</a></p>
 
-<h2>G</h2>
+<h2 id="startG"><a href="#startG">G</a></h2>
 
 <dl>
 <dt>gamma</dt>
@@ -100,8 +106,9 @@
 <dd>Graphic Interchange Format; common file format of web graphic images. GIF is a palette-based, 8-bit format.</dd>
 
 </dl>
+<p><a href="#top">TOP</a></p>
 
-<h2 id="startH">H</h2>
+<h2 id="startH"><a href="#startH">H</a></h2>
 <dl>
 <dt>hexadecimal</dt>
 <dd>A base-16 numbering system that uses the characters 0-9 and A-F. It is used in CSS and HTML for specifying color values</dd>
@@ -115,8 +122,9 @@
 <dt>HTTP</dt>
 <dd>Hypertext Transfer Protocol; the system that defines how web pages and media are requested and transferred between servers and browsers.</dd>
 </dl>
+<p><a href="#top">TOP</a></p>
 
-<h2>I</h2>
+<h2 id="startI"><a href="#startI">I</a></h2>
 
 <dl>
 <dt>imagemap</dt>
@@ -129,8 +137,9 @@
 <dd>Internet Service Provider; a company that sells access to the Internet computer network</dd>
 
 </dl>
+<p><a href="#top">TOP</a></p>
 
-<h2>J</h2>
+<h2 id="startJ"><a href="#startJ">J</a></h2>
 
 <dl>
 <dt>Java</dt>
@@ -139,15 +148,17 @@
 <dt>JavaScript</dt>
 <dd>A scripting language that adds behaviors to elements on web pages and browsers.</dd>
 </dl>
+<p><a href="#top">TOP</a></p>
 
-<h2>L</h2>
+<h2 id="startL"><a href="#startL">L</a></h2>
 
 <dl>
 <dt>lossy</dt>
 <dd>A type of compression in which data is thrown out to reduce file size. The JPEG format uses a lossy compression scheme.</dd>
 </dl>
+<p><a href="#top">TOP</a></p>
 
-<h2>M</h2>
+<h2 id="startM"><a href="#startM">M</a></h2>
 <dl>
 <dt>MP3</dt>
 <dd>A popuplar file format for high-quality audio that uses MPEG compression</dd>
@@ -155,21 +166,24 @@
 <dt>MPEG</dt>
 <dd>A family of multimedia standards created by the Motion Picture Experts Group</dd>
 </dl>
+<p><a href="#top">TOP</a></p>
 
-<h2>N</h2>
+<h2 id="startN"><a href="#startN">N</a></h2>
 
 <dl>
 <dt>nesting</dt>
 <dd>Placing one HTML element within another. HTML and XHTML define rules for what elements may be nested within another.</dd>
 </dl>
+<p><a href="#top">TOP</a></p>
 
-<h2>O</h2>
+<h2 id="startO"><a href="#startO">O</a></h2>
 <dl>
 <dt>optimizing</dt>
 <dd>Reducing file size to improve transfer time over the network.</dd>
 </dl>
+<p><a href="#top">TOP</a></p>
 
-<h2>P</h2>
+<h2 id="startP"><a href="#startP">P</a></h2>
 <dl>
 <dt>palette</dt>
 <dd>A table in an 8-bit indexed color file that provides color information for the pixels in the image.</dd>
@@ -183,14 +197,16 @@
 <dt>PNG</dt>
 <dd>Portable Network Graphic; a graphic file format that features support for 8-bit and 24 bit images</dd>
 </dl>
+<p><a href="#top">TOP</a></p>
 
-<h2>Q</h2>
+<h2 id="startQ"><a href="#startQ">Q</a></h2>
 <dl>
 <dt>QuickTime</dt>
 <dd>An audio and video format developed by Apple Computer and available for all platforms</dd>
 </dl>
+<p><a href="#top">TOP</a></p>
 
-<h2>R</h2>
+<h2 id="startR"><a href="#startR">R</a></h2>
 <dl>
 <dt>resolution</dt>
 <dd>The number of pixels per inch (ppi) in a bitmapped image or computer monitor</dd>
@@ -201,8 +217,9 @@
 <dt>root directory</dt>
 <dd>The top-level directory for a web site. The root directory contains all the files and subdirectories for a site.</dd>
 </dl>
+<p><a href="#top">TOP</a></p>
 
-<h2>S</h2>
+<h2 id="startS"><a href="#startS">S</a></h2>
 
 <dl>
 <dt>sans-serif font</dt>
@@ -211,14 +228,16 @@
 <dt>serif font</dt>
 <dd>A font that has horizontal slabs at the ends of character strokes. Times is an example</dd>
 </dl>
+<p><a href="#top">TOP</a></p>
 
-<h2>T</h2>
+<h2 id="startT"><a href="#startT">T</a></h2>
 <dl>
 <dt>tweening</dt>
 <dd>A function in animation tools for automatically creating frames between a start and end frame.</dd>
 </dl>
+<p><a href="#top">TOP</a></p>
 
-<h2>U</h2>
+<h2 id="startU"><a href="#startU">U</a></h2>
 <dl>
 <dt>Unix</dt>
 <dd>A multi-user, multi-tasking operating system developed by Bell Laboratories.</dd>
@@ -226,14 +245,16 @@
 <dt>URL</dt>
 <dd>Universal Resource Locator; the address of a document or resource on the World Wide Web</dd>
 </dl>
+<p><a href="#top">TOP</a></p>
 
-<h2>V</h2>
+<h2 id="startV"><a href="#startV">V</a></h2>
 <dl>
 <dt>vector image</dt>
 <dd>A graphic that uses mathematical equations to define shapes and fills. Vector images can be resized without change in quality.</dd>
 </dl>
+<p><a href="#top">TOP</a></p>
 
-<h2>W</h2>
+<h2 id="startW"><a href="#startW">W</a></h2>
 <dl>
 <dt>W3C</dt>
 <dd>The World Wide Web Consortium; a consortium of companies and organizations that develops common standards for the development of the Web.</dd>
@@ -242,8 +263,9 @@
 <dd>A set of 216 colors that is available on both Mac and Windows machines running 8-bit color monitors.</dd>
 
 </dl>
+<p><a href="#top">TOP</a></p>
 
-<h2>X</h2>
+<h2 id="startX"><a href="#startX">X</a></h2>
 <dl>
 <dt>XHTML</dt>
 <dd>The new HTML standard that has been written according to the rules of XML.</dd>
@@ -251,5 +273,4 @@
 <dt>XML</dt>
 <dd>eXtensible Markup Language; a metalanguage for creating custom markup languages</dd>
 </dl>
-
-
+<p><a href="#top">TOP</a></p>
