--- a/Ch8/ex8-2.html
+++ b/Ch8/ex8-2.html
@@ -4,5 +4,24 @@
     <title></title>
   </head>
   <body>
+    <table>
+      <tr>
+        <td> 7:00pm</td>
+        <td> 7:30pm </td>
+        <td> 8:00pm </td>
+      </tr>
+      <tr>
+        <td colspan="3"> The Sunday Night Movie</td>
+      </tr>
+      <tr>
+        <td> Perry Mason<td>
+        <td> Candid Camera<td>
+        <td> What's My line <td>
+      </tr>
+      <tr>
+        <td> Bonanza</td>
+        <td colspan="2"> The Wackiest Ship in the Army </td>
+      </tr>
+    </table>             
   </body>
 </html>
