--- a/bistro/menu.html
+++ b/bistro/menu.html
@@ -4,6 +4,11 @@
 <head>
 <meta charset="utf-8">
 <title>Black Goose Bistro Summer Menu</title>
+<link href="http://fonts.googleapis.com/css?family=Marko+One" rel="stylesheet">
+<style>
+  body {font-family:Verdana, sans-serif;}
+  h1 {font-family: "Marko One", Georgia, serif;}
+</style>
 
 </head>
 
@@ -53,6 +58,3 @@
 
 </body>
 </html>
-
-
-
