--- a/bistro/menu.html
+++ b/bistro/menu.html
@@ -6,8 +6,15 @@
 <title>Black Goose Bistro Summer Menu</title>
 <link href="http://fonts.googleapis.com/css?family=Marko+One" rel="stylesheet">
 <style>
-  body {font-family:Verdana, sans-serif;}
-  h1 {font-family: "Marko One", Georgia, serif;}
+  body {font-family:Verdana, sans-serif;
+        font-size: 100%;
+      }
+  h1 {font-family: "Marko One", Georgia, serif; font-size: 1.5em;}
+  h2 {font-size: 1em;}
+  p, dl {
+    font-size: .875em;
+  }
+  dt{ font-weight: bold;}
 </style>
 
 </head>
