--- a/bistro/menu.html
+++ b/bistro/menu.html
@@ -9,7 +9,7 @@
   body {font-family:Verdana, sans-serif;
         font-size: 100%;
       }
-  h1 {font-family: "Marko One", Georgia, serif; font-size: 1.5em;}
+  h1 {font: bold 1.5 em "Marko One", Georgia, serif;}
   h2 {font-size: 1em;}
   p, dl {
     font-size: .875em;
