--- a/bistro/menu.html
+++ b/bistro/menu.html
@@ -16,6 +16,23 @@
   }
   dt{ font-weight: bold;}
   strong {font-style: italic;}
+  dt strong {color: maroon;}
+  #info {color:teal;}
+  #info p {font-style: italic;}
+  .price { font-family: Georgia, serif;
+          font-style: italic;
+          color: grey;
+        }
+  .label{
+    font-weight: bold;
+    font-variant: small-caps;
+    font-style: normal;
+  }
+  p.warning, sup{
+    font-size: x-small;
+    color: red;
+  }
+
 </style>
 
 </head>
