--- a/bistro/menu.html
+++ b/bistro/menu.html
@@ -6,27 +6,41 @@
 <title>Black Goose Bistro Summer Menu</title>
 <link href="http://fonts.googleapis.com/css?family=Marko+One" rel="stylesheet">
 <style>
-  body {font-family:Verdana, sans-serif;
-        font-size: 100%;
+  body {font-family:Georgia, serif;
+        font-size: small;
+        line-height: 1.75em;
       }
-  h1 {font: bold 1.5 em "Marko One", Georgia, serif;}
-  h2 {font-size: 1em;}
+  h1 {font: bold 1.5 em "Marko One", Georgia, serif; color:purple;
+        text-shadow: .1em .1em .2em lightslategray;}
+  h2 {font-size: 1em;
+      text-transform: uppercase;
+      letter-spacing: .5em;
+      color:purple;}
   p, dl {
     font-size: .875em;
   }
-  dt{ font-weight: bold;}
+  dt{ font-weight: bold;
+      color: sienna;}
   strong {font-style: italic;}
   dt strong {color: maroon;}
-  #info {color:teal;}
-  #info p {font-style: italic;}
+
+  #info p {font-style: italic; color:grey}
   .price { font-family: Georgia, serif;
           font-style: italic;
           color: grey;
         }
+  h1, h2, #info {
+    text-align:center;
+  }
   .label{
     font-weight: bold;
     font-variant: small-caps;
     font-style: normal;
+  }
+  h2 +p{
+    text-align:center;
+    font-style:italic;
+
   }
   p.warning, sup{
     font-size: x-small;
